fix: harden release readiness and add executable packaging